Updated resume and fixed spacing

--- a/public/style.css
+++ b/public/style.css
@@ -4,13 +4,13 @@
   opacity: 1;
   animation: fadein 2s ease-in;
   position: relative;
-  min-width: 100%;
+  max-width: 100vw !important;
   min-height: 100vh !important;
   margin: auto;
   background: url("/public/images/parallax.jpg");
   color: white;
   background-attachment: fixed;
-  background-position: center;
+  background-position: right top;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -29,7 +29,7 @@ a {
 .nav {
   justify-content: flex-start;
   height: 10vh;
-  margin-left: 2rem;
+  padding: 1rem 1rem;
 }
 
 .nav_item {
@@ -60,11 +60,14 @@ a.glitch {
   bottom: 0;
   width: 100%;
   height: 5.5rem;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .line_break {
   margin-left: 30%;
   margin-right: 30%;
+  max-width: 100vw;
   background: white;
 }
 
@@ -77,7 +80,7 @@ a.glitch {
 /* HOMEPAGE STYLING */
 
 div#title {
-  height: 75vh;
+  height: 67vh;
 }
 div.home .text p {
   font-size: 1rem;
@@ -85,10 +88,16 @@ div.home .text p {
 }
 div.transition {
   height: 15vh;
+  max-width: 100vw;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 div#sec_transition {
+  max-width: 100vw;
   height: 45vh;
+  margin-left: 0;
+  margin-right: 0;
   background: url("/public/images/invertedparallaxgrey.png");
   background-attachment: fixed;
   background-position: center;
@@ -105,12 +114,15 @@ div#sec_transition {
 
 div#title div#heading {
   height: inherit;
+  max-width: inherit;
+  width: 100vw;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 div.transition div.glitch_container {
   position: relative;
   height: inherit;
-  width: inherit;
   padding-left: 49%;
   padding-right: 49%;
 }
@@ -157,7 +169,8 @@ div.about {
 }
 
 div#first_about {
-  padding-top: 8vh;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
 }
 
 div.home img#me {
@@ -168,14 +181,10 @@ div.home img#me {
 
 div.transition p {
   vertical-align: text-top;
-  font-size: 5rem;
+  font-size: 1rem;
 }
 div#about div.transition {
   padding-left: 8rem;
-}
-
-div.dots_container:nth-child(2) {
-  transform: translate(-5rem, 4rem);
 }
 
 div.end {
@@ -218,12 +227,14 @@ div.page {
   padding-left: 15vw;
   padding-right: 15vw;
   min-height: 80vh;
+  width: 100vw;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 div.work-container,
 div#publications {
   margin-top: 10rem;
-  margin-bottom: 5rem;
 }
 
 div.project_item {
